# math_utils

./: .gitignore  pyproject.toml
math_utils/: __init__.py  utils.py
math_utils/iterative/: linear.py  nonlinear.py
tests/: test_math_utils.py
