[tool.poetry]
name = "math_utils"
version = "0.1.0"
description = ""
authors = ["Alper <itsc0508@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.4"
ipython = "^7.29.0"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
